Hibernate with Simple OR Mapping and Collections Mapping Complete Example